// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`type policies can alter the root query __typename 1`] = `
{
  "Query:0": {
    "__typename": "Query",
    "id": 0,
  },
  "Query:1": {
    "__typename": "Query",
    "id": 1,
  },
  "Query:2": {
    "__typename": "Query",
    "id": 2,
  },
  "Query:3": {
    "__typename": "Query",
    "id": 3,
  },
  "ROOT_QUERY": {
    "__typename": "RootQuery",
    "items": [
      {
        "id": 0,
        "query": {
          "__ref": "Query:0",
        },
      },
      {
        "id": 1,
        "query": {
          "__ref": "Query:1",
        },
      },
      {
        "id": 2,
        "query": {
          "__ref": "Query:2",
        },
      },
      {
        "id": 3,
        "query": {
          "__ref": "Query:3",
        },
      },
    ],
  },
}
`;

exports[`type policies complains about missing key fields 1`] = `
[MockFunction] {
  "calls": [
    [
      "Missing field 'title' while writing result {
  "year": 2011,
  "theInformationBookData": {
    "__typename": "Book",
    "isbn": "1400096235",
    "title": "The Information",
    "subtitle": "A History, a Theory, a Flood",
    "author": {
      "name": "James Gleick"
    }
  }
}",
    ],
    [
      "Missing field 'year' while writing result {
  "__typename": "Book",
  "isbn": "1400096235",
  "title": "The Information",
  "subtitle": "A History, a Theory, a Flood",
  "author": {
    "name": "James Gleick"
  }
}",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`type policies field policies can handle Relay-style pagination 1`] = `
{
  "Artist:{"href":"/artist/jean-michel-basquiat"}": {
    "__typename": "Artist",
    "bio": "American, 1960-1988, New York, New York, based in New York, New York",
    "displayLabel": "Jean-Michel Basquiat",
    "href": "/artist/jean-michel-basquiat",
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "search:basquiat": {
      "edges": [
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": {
            "__ref": "Artist:{"href":"/artist/jean-michel-basquiat"}",
          },
        },
        {
          "__typename": "SearchableEdge",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Damien Hirst, James Rosenquist, David Salle, Andy Warhol, Jeff Koons, Jean-Michel Basquiat, Keith Haring, Kiki Smith, Sandro Chia, Kenny Scharf, Mike Bidlo, Jon Schueler, William Wegman, David Wojnarowicz, Taylor Mead, William S. Burroughs, Michael Halsband, Rene Ricard, and Chris DAZE Ellis",
            "displayLabel": "ephemera BASQUIAT",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat at Nahmad Contemporary Mar 12th – May 31st 2019",
            "displayLabel": "Jean-Michel Basquiat | Xerox",
          },
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      },
      "totalCount": 1292,
    },
  },
}
`;

exports[`type policies field policies can handle Relay-style pagination 2`] = `
{
  "Artist:{"href":"/artist/jean-michel-basquiat"}": {
    "__typename": "Artist",
    "bio": "American, 1960-1988, New York, New York, based in New York, New York",
    "displayLabel": "Jean-Michel Basquiat",
    "href": "/artist/jean-michel-basquiat",
  },
  "Artist:{"href":"/artist/reminiscent-of-basquiat"}": {
    "__typename": "Artist",
    "bio": "",
    "displayLabel": "Reminiscent of Basquiat",
    "href": "/artist/reminiscent-of-basquiat",
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "search:basquiat": {
      "edges": [
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": {
            "__ref": "Artist:{"href":"/artist/jean-michel-basquiat"}",
          },
        },
        {
          "__typename": "SearchableEdge",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Damien Hirst, James Rosenquist, David Salle, Andy Warhol, Jeff Koons, Jean-Michel Basquiat, Keith Haring, Kiki Smith, Sandro Chia, Kenny Scharf, Mike Bidlo, Jon Schueler, William Wegman, David Wojnarowicz, Taylor Mead, William S. Burroughs, Michael Halsband, Rene Ricard, and Chris DAZE Ellis",
            "displayLabel": "ephemera BASQUIAT",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat at Nahmad Contemporary Mar 12th – May 31st 2019",
            "displayLabel": "Jean-Michel Basquiat | Xerox",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Banksy, SEEN, JonOne and QUIK at Artrust Oct 8th – Dec 16th 2017",
            "displayLabel": "STREET ART: From Basquiat to Banksy",
          },
        },
        {
          "__typename": "SearchableEdge",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat, Shepard Fairey, COPE2, Pure Evil, Sickboy, Blade, Kurar, and LARS at Artrust",
            "displayLabel": "STREET ART 2: From Basquiat to Banksy",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
          "node": {
            "__ref": "Artist:{"href":"/artist/reminiscent-of-basquiat"}",
          },
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "endCursor": "YXJyYXljb25uZWN0aW9uOjU=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      },
      "totalCount": 1292,
    },
  },
}
`;

exports[`type policies field policies can handle Relay-style pagination 3`] = `
{
  "Artist:{"href":"/artist/jean-michel-basquiat"}": {
    "__typename": "Artist",
    "bio": "American, 1960-1988, New York, New York, based in New York, New York",
    "displayLabel": "Jean-Michel Basquiat",
    "href": "/artist/jean-michel-basquiat",
  },
  "Artist:{"href":"/artist/reminiscent-of-basquiat"}": {
    "__typename": "Artist",
    "bio": "",
    "displayLabel": "Reminiscent of Basquiat",
    "href": "/artist/reminiscent-of-basquiat",
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "search:basquiat": {
      "edges": [
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Damien Hirst, James Rosenquist, David Salle, Andy Warhol, Jeff Koons, Jean-Michel Basquiat, Keith Haring, Kiki Smith, Sandro Chia, Kenny Scharf, Mike Bidlo, Jon Schueler, William Wegman, David Wojnarowicz, Taylor Mead, William S. Burroughs, Michael Halsband, Rene Ricard, and Chris DAZE Ellis",
            "displayLabel": "ephemera BASQUIAT",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat at Nahmad Contemporary Mar 12th – May 31st 2019",
            "displayLabel": "Jean-Michel Basquiat | Xerox",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Banksy, SEEN, JonOne and QUIK at Artrust Oct 8th – Dec 16th 2017",
            "displayLabel": "STREET ART: From Basquiat to Banksy",
          },
        },
        {
          "__typename": "SearchableEdge",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat, Shepard Fairey, COPE2, Pure Evil, Sickboy, Blade, Kurar, and LARS at Artrust",
            "displayLabel": "STREET ART 2: From Basquiat to Banksy",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
          "node": {
            "__ref": "Artist:{"href":"/artist/reminiscent-of-basquiat"}",
          },
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "endCursor": "YXJyYXljb25uZWN0aW9uOjU=",
        "hasNextPage": true,
        "hasPreviousPage": true,
        "startCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      },
      "totalCount": 1292,
    },
  },
}
`;

exports[`type policies field policies can handle Relay-style pagination 4`] = `
{
  "Artist:{"href":"/artist/jean-michel-basquiat"}": {
    "__typename": "Artist",
    "bio": "American, 1960-1988, New York, New York, based in New York, New York",
    "displayLabel": "Jean-Michel Basquiat",
    "href": "/artist/jean-michel-basquiat",
  },
  "Artist:{"href":"/artist/reminiscent-of-basquiat"}": {
    "__typename": "Artist",
    "bio": "",
    "displayLabel": "Reminiscent of Basquiat",
    "href": "/artist/reminiscent-of-basquiat",
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "search:basquiat": {
      "edges": [
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": {
            "__ref": "Artist:{"href":"/artist/jean-michel-basquiat"}",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Damien Hirst, James Rosenquist, David Salle, Andy Warhol, Jeff Koons, Jean-Michel Basquiat, Keith Haring, Kiki Smith, Sandro Chia, Kenny Scharf, Mike Bidlo, Jon Schueler, William Wegman, David Wojnarowicz, Taylor Mead, William S. Burroughs, Michael Halsband, Rene Ricard, and Chris DAZE Ellis",
            "displayLabel": "ephemera BASQUIAT",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat at Nahmad Contemporary Mar 12th – May 31st 2019",
            "displayLabel": "Jean-Michel Basquiat | Xerox",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Banksy, SEEN, JonOne and QUIK at Artrust Oct 8th – Dec 16th 2017",
            "displayLabel": "STREET ART: From Basquiat to Banksy",
          },
        },
        {
          "__typename": "SearchableEdge",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat, Shepard Fairey, COPE2, Pure Evil, Sickboy, Blade, Kurar, and LARS at Artrust",
            "displayLabel": "STREET ART 2: From Basquiat to Banksy",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
          "node": {
            "__ref": "Artist:{"href":"/artist/reminiscent-of-basquiat"}",
          },
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "endCursor": "YXJyYXljb25uZWN0aW9uOjU=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      },
      "totalCount": 1292,
    },
  },
}
`;

exports[`type policies field policies can handle Relay-style pagination 5`] = `
{
  "Artist:{"href":"/artist/jean-michel-basquiat"}": {
    "__typename": "Artist",
    "bio": "American, 1960-1988, New York, New York, based in New York, New York",
    "displayLabel": "Jean-Michel Basquiat",
    "href": "/artist/jean-michel-basquiat",
  },
  "Artist:{"href":"/artist/reminiscent-of-basquiat"}": {
    "__typename": "Artist",
    "bio": "",
    "displayLabel": "Reminiscent of Basquiat",
    "href": "/artist/reminiscent-of-basquiat",
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "search:basquiat": {
      "edges": [
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": {
            "__ref": "Artist:{"href":"/artist/jean-michel-basquiat"}",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Damien Hirst, James Rosenquist, David Salle, Andy Warhol, Jeff Koons, Jean-Michel Basquiat, Keith Haring, Kiki Smith, Sandro Chia, Kenny Scharf, Mike Bidlo, Jon Schueler, William Wegman, David Wojnarowicz, Taylor Mead, William S. Burroughs, Michael Halsband, Rene Ricard, and Chris DAZE Ellis",
            "displayLabel": "ephemera BASQUIAT",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat at Nahmad Contemporary Mar 12th – May 31st 2019",
            "displayLabel": "Jean-Michel Basquiat | Xerox",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Banksy, SEEN, JonOne and QUIK at Artrust Oct 8th – Dec 16th 2017",
            "displayLabel": "STREET ART: From Basquiat to Banksy",
          },
        },
        {
          "__typename": "SearchableEdge",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat, Shepard Fairey, COPE2, Pure Evil, Sickboy, Blade, Kurar, and LARS at Artrust",
            "displayLabel": "STREET ART 2: From Basquiat to Banksy",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
          "node": {
            "__ref": "Artist:{"href":"/artist/reminiscent-of-basquiat"}",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat at Brooklyn Museum Apr 3rd – Aug 23rd 2015",
            "displayLabel": "Basquiat: The Unknown Notebooks",
          },
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "endCursor": "YXJyYXljb25uZWN0aW9uOjY=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      },
      "totalCount": 1292,
    },
  },
}
`;

exports[`type policies field policies can handle Relay-style pagination 6`] = `
{
  "Artist:{"href":"/artist/james-turrell"}": {
    "__typename": "Artist",
    "bio": "American, born 1943, Los Angeles, California",
    "displayLabel": "James Turrell",
    "href": "/artist/james-turrell",
  },
  "Artist:{"href":"/artist/jean-michel-basquiat"}": {
    "__typename": "Artist",
    "bio": "American, 1960-1988, New York, New York, based in New York, New York",
    "displayLabel": "Jean-Michel Basquiat",
    "href": "/artist/jean-michel-basquiat",
  },
  "Artist:{"href":"/artist/reminiscent-of-basquiat"}": {
    "__typename": "Artist",
    "bio": "",
    "displayLabel": "Reminiscent of Basquiat",
    "href": "/artist/reminiscent-of-basquiat",
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "search:basquiat": {
      "edges": [
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": {
            "__ref": "Artist:{"href":"/artist/jean-michel-basquiat"}",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Damien Hirst, James Rosenquist, David Salle, Andy Warhol, Jeff Koons, Jean-Michel Basquiat, Keith Haring, Kiki Smith, Sandro Chia, Kenny Scharf, Mike Bidlo, Jon Schueler, William Wegman, David Wojnarowicz, Taylor Mead, William S. Burroughs, Michael Halsband, Rene Ricard, and Chris DAZE Ellis",
            "displayLabel": "ephemera BASQUIAT",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat at Nahmad Contemporary Mar 12th – May 31st 2019",
            "displayLabel": "Jean-Michel Basquiat | Xerox",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Banksy, SEEN, JonOne and QUIK at Artrust Oct 8th – Dec 16th 2017",
            "displayLabel": "STREET ART: From Basquiat to Banksy",
          },
        },
        {
          "__typename": "SearchableEdge",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat, Shepard Fairey, COPE2, Pure Evil, Sickboy, Blade, Kurar, and LARS at Artrust",
            "displayLabel": "STREET ART 2: From Basquiat to Banksy",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
          "node": {
            "__ref": "Artist:{"href":"/artist/reminiscent-of-basquiat"}",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat at Brooklyn Museum Apr 3rd – Aug 23rd 2015",
            "displayLabel": "Basquiat: The Unknown Notebooks",
          },
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "endCursor": "YXJyYXljb25uZWN0aW9uOjY=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      },
      "totalCount": 1292,
    },
    "search:james turrell": {
      "edges": [
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": {
            "__ref": "Artist:{"href":"/artist/james-turrell"}",
          },
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "endCursor": "YXJyYXljb25uZWN0aW9uOjA=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      },
      "totalCount": 13531,
    },
  },
}
`;

exports[`type policies field policies can handle Relay-style pagination 7`] = `
{
  "Artist:{"href":"/artist/james-turrell"}": {
    "__typename": "Artist",
    "bio": "American, born 1943, Los Angeles, California",
    "displayLabel": "James Turrell",
    "href": "/artist/james-turrell",
  },
  "Artist:{"href":"/artist/reminiscent-of-basquiat"}": {
    "__typename": "Artist",
    "bio": "",
    "displayLabel": "Reminiscent of Basquiat",
    "href": "/artist/reminiscent-of-basquiat",
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "search:basquiat": {
      "edges": [
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": {
            "__ref": "Artist:{"href":"/artist/jean-michel-basquiat"}",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Damien Hirst, James Rosenquist, David Salle, Andy Warhol, Jeff Koons, Jean-Michel Basquiat, Keith Haring, Kiki Smith, Sandro Chia, Kenny Scharf, Mike Bidlo, Jon Schueler, William Wegman, David Wojnarowicz, Taylor Mead, William S. Burroughs, Michael Halsband, Rene Ricard, and Chris DAZE Ellis",
            "displayLabel": "ephemera BASQUIAT",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat at Nahmad Contemporary Mar 12th – May 31st 2019",
            "displayLabel": "Jean-Michel Basquiat | Xerox",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Banksy, SEEN, JonOne and QUIK at Artrust Oct 8th – Dec 16th 2017",
            "displayLabel": "STREET ART: From Basquiat to Banksy",
          },
        },
        {
          "__typename": "SearchableEdge",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat, Shepard Fairey, COPE2, Pure Evil, Sickboy, Blade, Kurar, and LARS at Artrust",
            "displayLabel": "STREET ART 2: From Basquiat to Banksy",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
          "node": {
            "__ref": "Artist:{"href":"/artist/reminiscent-of-basquiat"}",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat at Brooklyn Museum Apr 3rd – Aug 23rd 2015",
            "displayLabel": "Basquiat: The Unknown Notebooks",
          },
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "endCursor": "YXJyYXljb25uZWN0aW9uOjY=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      },
      "totalCount": 1292,
    },
    "search:james turrell": {
      "edges": [
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": {
            "__ref": "Artist:{"href":"/artist/james-turrell"}",
          },
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "endCursor": "YXJyYXljb25uZWN0aW9uOjA=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      },
      "totalCount": 13531,
    },
  },
}
`;

exports[`type policies field policies can handle Relay-style pagination 8`] = `
{
  "Artist:{"href":"/artist/james-turrell"}": {
    "__typename": "Artist",
    "bio": "American, born 1943, Los Angeles, California",
    "displayLabel": "James Turrell",
    "href": "/artist/james-turrell",
  },
  "Artist:{"href":"/artist/reminiscent-of-basquiat"}": {
    "__typename": "Artist",
    "bio": "",
    "displayLabel": "Reminiscent of Basquiat",
    "href": "/artist/reminiscent-of-basquiat",
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "search:basquiat": {
      "edges": [
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": {
            "__ref": "Artist:{"href":"/artist/jean-michel-basquiat"}",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Damien Hirst, James Rosenquist, David Salle, Andy Warhol, Jeff Koons, Jean-Michel Basquiat, Keith Haring, Kiki Smith, Sandro Chia, Kenny Scharf, Mike Bidlo, Jon Schueler, William Wegman, David Wojnarowicz, Taylor Mead, William S. Burroughs, Michael Halsband, Rene Ricard, and Chris DAZE Ellis",
            "displayLabel": "ephemera BASQUIAT",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat at Nahmad Contemporary Mar 12th – May 31st 2019",
            "displayLabel": "Jean-Michel Basquiat | Xerox",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Banksy, SEEN, JonOne and QUIK at Artrust Oct 8th – Dec 16th 2017",
            "displayLabel": "STREET ART: From Basquiat to Banksy",
          },
        },
        {
          "__typename": "SearchableEdge",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat, Shepard Fairey, COPE2, Pure Evil, Sickboy, Blade, Kurar, and LARS at Artrust",
            "displayLabel": "STREET ART 2: From Basquiat to Banksy",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
          "node": {
            "__ref": "Artist:{"href":"/artist/reminiscent-of-basquiat"}",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
          "node": {
            "__typename": "SearchableItem",
            "description": "Past show featuring works by Jean-Michel Basquiat at Brooklyn Museum Apr 3rd – Aug 23rd 2015",
            "displayLabel": "Basquiat: The Unknown Notebooks",
          },
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "endCursor": "YXJyYXljb25uZWN0aW9uOjY=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      },
      "totalCount": 1292,
    },
    "search:james turrell": {
      "edges": [
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": {
            "__ref": "Artist:{"href":"/artist/james-turrell"}",
          },
        },
        {
          "__typename": "SearchableEdge",
          "cursor": "YXJyYXljb25uZWN0aW9uOjEx",
          "node": {
            "__typename": "SearchableItem",
            "description": "<placeholder for unknown description>",
            "displayLabel": "James Turrell: Light knows when we’re looking",
          },
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "endCursor": "YXJyYXljb25uZWN0aW9uOjEx",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      },
      "totalCount": 13531,
    },
  },
}
`;

exports[`type policies field policies can handle Relay-style pagination without args 1`] = `
{
  "ROOT_QUERY": {
    "__typename": "Query",
    "todos": {
      "edges": [
        {
          "__ref": "TodoEdge:edge1",
          "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "YXJyYXljb25uZWN0aW9uOjI=",
      },
      "totalCount": 1292,
    },
  },
  "Todo:1": {
    "__typename": "Todo",
    "id": "1",
    "title": "Fix the tests",
  },
  "TodoEdge:edge1": {
    "__typename": "TodoEdge",
    "id": "edge1",
    "node": {
      "__ref": "Todo:1",
    },
  },
}
`;

exports[`type policies field policies can handle Relay-style pagination without args 2`] = `
{
  "ROOT_QUERY": {
    "__typename": "Query",
    "todos": {
      "edges": [
        {
          "__ref": "TodoEdge:edge1",
          "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
        },
      ],
      "extraMetaData": "extra",
      "pageInfo": {
        "__typename": "PageInfo",
        "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "YXJyYXljb25uZWN0aW9uOjI=",
      },
      "totalCount": 1293,
    },
  },
  "Todo:1": {
    "__typename": "Todo",
    "id": "1",
    "title": "Fix the tests",
  },
  "TodoEdge:edge1": {
    "__typename": "TodoEdge",
    "id": "edge1",
    "node": {
      "__ref": "Todo:1",
    },
  },
}
`;

exports[`type policies field policies can include optional arguments in field keyArgs policy 1`] = `
{
  "Author:{"name":"Nadia Eghbal"}": {
    "__typename": "Author",
    "name": "Nadia Eghbal",
    "writings:{"type":"Book"}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "author": {
      "__ref": "Author:{"name":"Nadia Eghbal"}",
    },
  },
}
`;

exports[`type policies field policies can include optional arguments in field keyArgs policy 2`] = `
{
  "Author:{"name":"Nadia Eghbal"}": {
    "__typename": "Author",
    "name": "Nadia Eghbal",
    "writings:{"a":1,"b":2,"type":"Book"}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"type":"Book"}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "author": {
      "__ref": "Author:{"name":"Nadia Eghbal"}",
    },
  },
}
`;

exports[`type policies field policies can include optional arguments in field keyArgs policy 3`] = `
{
  "Author:{"name":"Nadia Eghbal"}": {
    "__typename": "Author",
    "name": "Nadia Eghbal",
    "writings:{"a":1,"b":2,"type":"Book"}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"a":1,"b":2}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"type":"Book"}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "author": {
      "__ref": "Author:{"name":"Nadia Eghbal"}",
    },
  },
}
`;

exports[`type policies field policies can include optional arguments in field keyArgs policy 4`] = `
{
  "Author:{"name":"Nadia Eghbal"}": {
    "__typename": "Author",
    "name": "Nadia Eghbal",
    "writings:{"a":1,"b":2,"type":"Book"}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"a":1,"b":2}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"b":2}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"type":"Book"}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "author": {
      "__ref": "Author:{"name":"Nadia Eghbal"}",
    },
  },
}
`;

exports[`type policies field policies can include optional arguments in field keyArgs policy 5`] = `
{
  "Author:{"name":"Nadia Eghbal"}": {
    "__typename": "Author",
    "name": "Nadia Eghbal",
    "writings:{"a":1,"b":2,"type":"Book"}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"a":1,"b":2}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"a":3}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"b":2}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"type":"Book"}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "author": {
      "__ref": "Author:{"name":"Nadia Eghbal"}",
    },
  },
}
`;

exports[`type policies field policies can include optional arguments in field keyArgs policy 6`] = `
{
  "Author:{"name":"Nadia Eghbal"}": {
    "__typename": "Author",
    "name": "Nadia Eghbal",
    "writings:{"a":1,"b":2,"type":"Book"}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"a":1,"b":2}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"a":3}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"b":2}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"type":"Book"}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "author": {
      "__ref": "Author:{"name":"Nadia Eghbal"}",
    },
  },
}
`;

exports[`type policies field policies can include optional arguments in field keyArgs policy 7`] = `
{
  "Author:{"name":"Nadia Eghbal"}": {
    "__typename": "Author",
    "name": "Nadia Eghbal",
    "writings:{"a":1,"b":2,"type":"Book"}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"a":1,"b":2}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"a":3}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"b":2}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"b":4}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"type":"Book"}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "author": {
      "__ref": "Author:{"name":"Nadia Eghbal"}",
    },
  },
}
`;

exports[`type policies field policies can include optional arguments in field keyArgs policy 8`] = `
{
  "Author:{"name":"Nadia Eghbal"}": {
    "__typename": "Author",
    "name": "Nadia Eghbal",
    "writings": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"a":1,"b":2,"type":"Book"}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"a":1,"b":2}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"a":3}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"b":2}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"b":4}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{"type":"Book"}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
    "writings:{}": [
      {
        "__typename": "Book",
        "isbn": "0578675862",
        "title": "Working in Public: The Making and Maintenance of Open Source Software",
      },
    ],
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "author": {
      "__ref": "Author:{"name":"Nadia Eghbal"}",
    },
  },
}
`;

exports[`type policies field policies read, merge, and modify functions can access options.storage 1`] = `
{
  "ROOT_QUERY": {
    "__typename": "Query",
    "mergeModify": 11,
    "mergeRead": 1,
    "mergeReadModify": 101,
  },
}
`;

exports[`type policies field policies read, merge, and modify functions can access options.storage 2`] = `
{
  "ROOT_QUERY": {
    "__typename": "Query",
    "mergeModify": 11,
    "mergeRead": 1,
    "mergeReadModify": 101,
  },
}
`;

exports[`type policies field policies readField helper function calls custom read functions 1`] = `
[MockFunction] {
  "calls": [
    [
      "Missing field 'blockers' while writing result {
  "__typename": "Task",
  "id": 4,
  "description": "grandchild task"
}",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`type policies field policies runs nested merge functions as well as ancestors 1`] = `
[MockFunction] {
  "calls": [
    [
      "Missing field 'time' while writing result {
  "__typename": "Event",
  "id": 123
}",
    ],
    [
      "Missing field 'time' while writing result {
  "__typename": "Event",
  "id": 345,
  "name": "Rooftop dog party",
  "attendees": [
    {
      "__typename": "Attendee",
      "id": 456,
      "name": "Inspector Beckett"
    },
    {
      "__typename": "Attendee",
      "id": 234
    }
  ]
}",
    ],
    [
      "Missing field 'name' while writing result {
  "__typename": "Attendee",
  "id": 234
}",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`type policies readField warns if explicitly passed undefined \`from\` option 1`] = `
[MockFunction] {
  "calls": [
    [
      "Undefined 'from' passed to readField with arguments [{"fieldName":"firstName","from":<undefined>}]",
    ],
    [
      "Undefined 'from' passed to readField with arguments ["lastName",<undefined>]",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`type policies support inheritance 1`] = `
{
  "Cobra:{"tagId":"Egypt30BC"}": {
    "__typename": "Cobra",
    "scientificName": "naja haje",
    "tagId": "Egypt30BC",
    "venomous": true,
  },
  "Cottonmouth:{"tagId":"CM420"}": {
    "__typename": "Cottonmouth",
    "scientificName": "agkistrodon piscivorus",
    "tagId": "CM420",
    "venomous": true,
  },
  "Python:{"tagId":"BigHug4U"}": {
    "__typename": "Python",
    "scientificName": "malayopython reticulatus",
    "tagId": "BigHug4U",
    "venomous": false,
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "reptiles": [
      {
        "__ref": "Turtle:{"tagId":"RedEaredSlider42"}",
      },
      {
        "__ref": "Python:{"tagId":"BigHug4U"}",
      },
      {
        "__ref": "Cobra:{"tagId":"Egypt30BC"}",
      },
      {
        "__ref": "Cottonmouth:{"tagId":"CM420"}",
      },
    ],
  },
  "Turtle:{"tagId":"RedEaredSlider42"}": {
    "__typename": "Turtle",
    "scientificName": "trachemys scripta elegans",
    "tagId": "RedEaredSlider42",
  },
}
`;
